fix(core/executions): make text on truncated params selectable (#6959)

--- a/app/scripts/modules/core/src/pipeline/status/executionParameters.less
+++ b/app/scripts/modules/core/src/pipeline/status/executionParameters.less
@@ -33,4 +33,11 @@
   display: table-cell;
   padding: 1px;
   word-break: break-word;
+
+  .truncate-toggle {
+    padding: 0;
+    align-self: flex-start;
+    outline: none;
+    line-height: 30px;
+  }
 }
